# xiaozhi_C3

./: CMakeLists.txt  LANGUAGE_SELECTION.md  MIGRATION_SUMMARY.md  OTA_SETUP.md  robot_control_backup.txt  xiaozhi_C3.code-workspace  语言选择功能说明.md
.github/ISSUE_TEMPLATE/: 02_runtime_bug.yml
.github/workflows/: build.yml
api/: index.html
api/ota/: index.json
docs/: mcp-usage.md
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.cc.bak  application.h  application_new.cc  application_old_backup.cc  assets.cc  idf_component.yml  language_runtime.cc  language_runtime.h  language_selection.h  language_sounds_zh_cn.h  main.cc  mcp_server.cc  ota.cc  ota.h  second_uart.cc  second_uart.h  system_info.cc
main/audio/: audio_service.cc  audio_service.h
main/audio/wake_words/: esp_wake_word.cc  esp_wake_word.h
main/boards/: README.md
main/boards/common/: board.cc  board.h  wifi_board.cc
main/boards/lichuang-c3-dev/: README.md  config.h  lichuang_c3_dev_board.cc
main/display/: display.cc  display.h  lcd_display.cc  lcd_display.h
main/iot/: README.md
main/protocols/: mqtt_protocol.cc  protocol.cc  protocol.h
partitions/v1/: 16m.csv
修改记录/: 2025-11-20-语言和唤醒词修改记录.md  CHANGELOG-uart-migration.md  README-uart-migration.md  UART-MIGRATION-SUMMARY.md  uart-pin-migration.md  uart-pinout-comparison.md  清理编译文件记录.md
